feat: adiciona a função de atualização do cliente e de seus respectivos endereços
